--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,13 +3,20 @@ $fontSizeBig: 40px;
 $fontSizeMedium: 20px;
 $fontSizeStandart: 14px;
 $margin: 20px;
-$padding: 20px;
+$marginPar: 15px 0;
+$margin-0-5: 0 5px;
+$padding1: 20px;
+$padding2: 5px 10px;
+$paddingButton: 14px 20px;
 $white:#fff;
 $black: #000;
-$grey: #6e6e6e;
+$grey: #333;
+$light-grey: #ddd;
 
 $fontSize_h1: $fontSizeBig;
 $fontSize_h2: $fontSizeMedium;
 
-$containere_padding: $padding;
-
+$containere_padding: $padding1;
+$marginPar_list: $marginPar;
+$borderColor_light: $white;
+$borderColor_dark: $black;
