--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -1,3 +1,4 @@
+    @import "variables";
     .box {
         display: flex;
         flex-direction: column;
@@ -20,6 +21,13 @@
                 display: flex;
                 margin-left: 10px;
             }
+        }
+        .select{
+            padding: 5px;
+            background-color: $grey;
+            border: 2px solid $white;
+            color: $white;
+            margin:5px 0;
         }
     }
     
