--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -24,9 +24,6 @@
         }
         .select{
             padding: 5px;
-            background-color: $grey;
-            border: 2px solid $white;
-            color: $white;
             margin:5px 0;
         }
     }
@@ -45,6 +42,16 @@
                         }
                     }
                 }
+                .select{
+                    background-color: $grey;
+                    border: 2px solid $white;
+                    color: $white;
+                    transition: all .5s;
+                    &:hover {
+                        background-color: $white;
+                        color: $black;
+                    }
+                }
             }
         }
     }
@@ -60,6 +67,16 @@
                         path {
                             fill: $white;
                         }
+                    }
+                }
+                .select{
+                    background-color: $light-grey;
+                    border: 2px solid $black;
+                    color: $black;
+                    transition: all .5s;
+                    &:hover {
+                        background-color: $black;
+                        color: $white;
                     }
                 }
             }
